--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -181,7 +181,7 @@
 
         function openApp() {
             if (isiOS) {
-                alert('打开IOSAp阿斯顿发生p');
+                alert('打开IOSApp');
                  window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
                 // $('#clickApp').attr('href','https://www.baidu.com');
                 // alert("下载app");
