--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -183,6 +183,7 @@
 
         function openApp() {
             if (isiOS) {
+                alert(userAgent);
                 alert(isQQ);
                 if (isiPad) {
                     //QQ中能打开
