--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -124,7 +124,8 @@
         <!--空白容器-->
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
-            <span id="bottom_span">请在智学网APP内完成练习</span>
+            <span id="bottom_span">尚未安装家长端APP，<a id="downLoadApp" v-on:click="downApp">立即下载</a></span>
+            <img id="share_downLoadIcon" src="./image/share_download_IconImage@2x.png">
             <a id="clickApp"><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
         </div>
     </div>
@@ -149,6 +150,7 @@
         var isiPad = !!userAgent.match(/iPad/i);//ipad终端
         var isWeiXin = (userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger');
         var isIOSQQ = (isiOS && / QQ/i.test(userAgent));
+        //不是微信的前提下自动打开应用
         if (!isWeiXin) {
             openApp();
         }
@@ -165,7 +167,7 @@
         });
 
         //下载应用
-        $("#downloadApp").click(function () {
+        $("#downLoadApp").click(function () {
             if (isWeiXin) {
                 document.body.addEventListener('touchmove', function (e) {
                     e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
