--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -125,7 +125,7 @@
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">尚未安装家长端APP，<a id="downLoadApp" v-on:click="downApp">立即下载</a></span>
-            <!--<img id="share_downLoadIcon" src="./image/share_download_IconImage@2x.png">-->
+            <img id="share_downLoadIcon" src="./image/share_download_IconImage@2x.png">
             <a id="clickApp"><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
         </div>
     </div>
