--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -118,7 +118,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第三步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第三俄方我看还是德国法国步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
@@ -145,11 +145,13 @@
 <script src="js/index.js"></script>
 <script type="text/javascript">
     $(function () {
-        var userAgent = navigator.userAgent, appVersion = navigator.appVersion;
+        var userAgent = navigator.userAgent;
+        var isAndroid = userAgent.indexOf('Android') > -1 || userAgent.indexOf('Linux') > -1; //android终端或者uc浏览器
         var isiOS = !!userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
         var isiPad = !!userAgent.match(/iPad/i);//ipad终端
         var isWeiXin = (userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger');
         var isIOSQQ = (isiOS && / QQ/i.test(userAgent));
+        var isAndroidQQ = (isAndroid && /MQQBrowser/i.test(userAgent) && /QQ/i.test((userAgent).split('MQQBrowser')));
         //不是微信的前提下自动打开应用
         if (!isWeiXin) {
             openApp();
@@ -195,10 +197,16 @@
                     }
                 }
             } else {
-                var ifr = document.createElement('iframe');
-                ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
-                ifr.style.display = 'none';
-                document.body.appendChild(ifr);
+                if (isAndroidQQ) {
+                    var ifr = document.createElement('iframe');
+                    ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
+                    ifr.style.display = 'none';
+                    document.body.appendChild(ifr);
+                    document.body.remove(ifr);
+                } else {
+                    alert("非QQ");
+                    window.location.href = "zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=";
+                }
             }
         }
 
