--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -164,6 +164,7 @@
                 }, {passive: false});
                 $('#coverBackview').css('display','block');
             } else {
+                alert("打开应用");
                 openApp();
             }
         });
