--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -164,7 +164,6 @@
                 }, {passive: false});
                 $('#coverBackview').css('display','block');
             } else {
-                alert("打开应用");
                 openApp();
             }
         });
@@ -203,14 +202,15 @@
                     ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
                     ifr.style.display = 'none';
                     document.body.appendChild(ifr);
-                    document.body.remove(ifr);
+                    document.body.removeChild(ifr);
                 } else {
                     alert("非QQ");
                     var ifr = document.createElement('iframe');
                     ifr.src = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
                     ifr.style.display = 'none';
                     document.body.appendChild(ifr);
-                    document.body.remove(ifr);                }
+                    document.body.removeChild(ifr);
+                }
             }
         }
 
