--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -162,7 +162,7 @@
                 }, {passive: false});
                 $('#coverBackview').css('display','block');
             } else {
-                // openApp();
+                openApp();
             }
         });
 
@@ -174,7 +174,7 @@
                 }, {passive: false});
                 $('#coverBackview').css('display','block');
             } else {
-                // downLoadApp();
+                downLoadApp();
             }
         });
 
